# AlgorithmAtlas

./: .env.example  .gitignore  Dockerfile  PROGRESS.md  README.md  atlascode_coverage.json  atlascode_problem_blueprint.json  atlascode_test_manifest.json  bash.exe.stackdump  docker-compose.yml  render.yaml  scratch_contracts.json  scratch_missing_ruby.json  scratch_statements.txt  scratch_swift_contracts.json  scratch_swift_signatures.txt
apps/backend/: Dockerfile  pyproject.toml
apps/backend/algorithm_atlas/: config.py  database.py  main.py
apps/backend/algorithm_atlas/ai/: __init__.py  context_builder.py  memory.py  orchestrator.py  provider.py
apps/backend/algorithm_atlas/ai/agents/: __init__.py  atlascode.py  base.py  challenge.py  general.py  interviewer.py  navigation.py  notebook.py  search.py  teaching.py  visualization.py  whiteboard.py
apps/backend/algorithm_atlas/api/v1/: ai.py  algorithms.py  benchmarks.py  experiments.py  notebook.py  problems.py  progress.py  router.py  simulations.py  submissions.py
apps/backend/algorithm_atlas/atlascode/: __init__.py  coverage.py  discovery.py  independent_oracles.py  ledger_snapshot.json  ledger_snapshot.py  oracle.py  problems_snapshot.py  seed.py  testgen.py
apps/backend/algorithm_atlas/atlascode/families/: __init__.py  array_hashing_variants.py  bfs_graph_variants.py  (+36 more)
apps/backend/algorithm_atlas/benchmark/: config.py  runner.py  rust_runner.py
apps/backend/algorithm_atlas/models/: __init__.py  atlas_code.py  atlas_memory.py  experiment.py
apps/backend/algorithm_atlas/plugins/: loader.py  registry.py
apps/backend/algorithm_atlas/simulation/: engine.py  session_store.py
apps/backend/algorithm_atlas/submission/: evaluator.py
apps/backend/tests/: conftest.py  test_api.py  test_atlascode_function_mode.py  test_atlascode_judge.py  test_config_db_resolver.py  test_notebook_runner_transport.py
apps/backend/tests/unit/: test_independent_oracles.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
(+974 files in other folders)
