[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithm-atlas-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "loguru>=0.7.2",
    "jsonschema>=4.22.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "networkx>=3.3",
    "sympy>=1.12.0",
    "algorithm-atlas-sdk",          # local package — install with pip install -e
    "groq>=0.9.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "psutil>=6.0.0",                # real peak-memory measurement for the AtlasCode judge
    "httpx>=0.27",                   # Ollama Cloud provider (OpenAI-compatible HTTP API)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",                   # For TestClient
    "websockets>=12.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["algorithm_atlas*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]   # FastAPI Depends() in function signatures

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
